content/style/blog.sass
/* MIXINS

$h1sz: 20px

@mixin square($side)
  display: inline-block
  height: $side
  width: $side
  margin: 20px
  z-index: -1

@mixin disk($diam)
  @include square($diam)
  border-radius: 50%

@mixin left($size, $factor)
  position: absolute
  left: -$size/$factor - 15px
  bottom: 50%
  margin: 0px
  margin-bottom: -$size/2

@mixin ldisk($size, $factor)
  @include disk($size)
  @include left($size, $factor)

@mixin lsquare($size, $factor)
  @include square($size)
  @include left($size, $factor)


/* ALL

span.lead
  font-size: 60pt
  line-height: 60pt
  margin-right: 5px
  float: left


.seealso, .extra
  margin-top: 20px
  margin-left: 20px
  max-width: 350px
  a
    font-weight: bold
  ul
    list-style-type: none
    padding: 0px
  li
    padding: 0px
    margin: 0px

.seealso:before
  font-weight: bold
  font-size: 16pt
  content: "Read more"

ul.toc
  padding-left: 20px
  list-style-type: none
  ul
    padding-left: 20px
    list-style-type: none
  a
    /* position: relative
    color: #000
  a.selected
    font-weight: bold
  a.selected:before
    position: absolute
    left: 10px
    content: "\25B6"

ul.toc li
  padding-bottom: 0px

.signature
  padding-top: 20px

.signature a
  font-weight: bold

.date:before
  content: " - "
.date
  color: #aaa

.sidebyside
  width: 100%
  display: flex
  flex-direction: row
  > *
    width: 50%


.title
  position: relative
.title:before
  @include ldisk(140px, 3)
  background-color: #B6D8D3
  content: ""

.tagline
  font-size: 20pt
  font-style: italic
  padding-bottom: 20px


h1
  position: relative
h1:before
  @include lsquare($h1sz, 1)
  background-color: #532D71
  color: white
  content: ""

.title
  font-size: 40pt
  font-weight: bold
  margin-top: 20px
  margin-bottom: 50px

.title, h1, h2, h3
  font-family: $font-title, sans-serif

.title, h1, h2, h3, b
  color: black

pre, pre.hljs
  font-size: 12pt
  background-color: #f5f5ff
  padding: 5px
  border-left: 5px solid #9175a8

table
  border: 2px solid black

th, td
  padding-top: 0px
  padding-bottom: 0px

li
  padding-bottom: 10px


/* INDEX

.intro
  margin-top: 20px
  margin-bottom: 30px
  font-size: 16pt

ul.articles
  list-style-type: none
  padding-left: 0px
  .postbit
    padding: 5px
    cursor: pointer
    a
      font-weight: bold
      color: black
  .postbit:hover
    background-color: #f5f5ff
  .tagline
    display: block
    padding: 0px
    margin-left: 30px
    font-size: 14pt


/* ABOUT

.project
  margin-bottom: 20px
  .project-title:hover
    background-color: #ddd
  .project-title
    display: flex
    align-items: center
    background-color: #eee
    font-family: $font-title
    padding: 5px
    cursor: pointer
    img
      width: 200px
      margin-right: 40px
    a
      font-size: 30pt
      font-weight: bold
      color: black
  .project-description
    display: block
    padding: 5px

.github-image
  margin-top: 9px
  margin-left: 9px

.paper
  margin-left: 10px



/* ORNATE

.ornate
  @include row
  align-items: center
  justify-content: center

.deco1
  @include disk(100px)
  background-color: #B6D8D3

.deco2
  @include disk(40px)
  background-color: orangered

.deco3
  @include disk(100px)
  background-color: #ffe4b2

.decoL
  display: inline-block
  flex-grow: 1
  height: 2px
  background-color: orangered



/* NAV

@media screen and (min-width: $width-body+300px)
  #nav
    @include column
    position: fixed
    padding: 10px
    left: 0px
    top: 0px
  #title-container
    max-width: $width-body
    margin: auto


@media screen and (max-width: $width-body+300px)
  .sidebyside
    width: 100%
    display: flex
    flex-direction: column
    > *
      width: 100%


@media screen and (max-width: $width-body+300px) and (min-device-aspect-ratio: 100/99)
  #logo img
    height: 50px
  #nav-container
    background-color: #eee
  #nav
    padding: 10px
    ul.toc, .seealso, .extra
      display: none
  .title:before, h1:before, h2:before
    visibility: hidden
  #title-container
    background-color: #B6D8D3
  .title
    margin-top: 0px
    padding-left: 50px
    padding-top: 20px
    padding-bottom: 20px



@media screen and (max-device-aspect-ratio: 99/100)
  #logo img
    height: 100px
  #nav-container
    background-color: #eee
  #nav
    padding: 10px
    ul.toc, .seealso
      display: none
  .title:before, h1:before, h2:before
    visibility: hidden
  #title-container
    background-color: #B6D8D3
  .title
    margin-top: 0px
    padding-left: 50px
    padding-top: 20px
    padding-bottom: 20px
  ol
    padding-left: 70px
  .share-buttons > a img
    height: 100px
    padding: 0 25px
  span.lead
    font-size: 100pt
    line-height: 100pt
    margin-right: 20px
  pre.hljs
    font-size: 30px

